# xingyu-lyrics-aligner

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release-image.yml
deploy/: .env.worker.example  docker-compose.worker.example.yml
docker/: README.md  entrypoint.sh
docs/: architecture.md  architecture.zh-CN.md  changelog.md  desktop-worker-protocol.md  docker-worker.md  macos-development.md  macos-model-management.md  macos-release.md  macos-runtime.md  macos-unsigned-install.md  roadmap.md  runtime-environment.md  runtime-environment.zh-CN.md  third-party-licenses.md
docs/examples/: swlrc-char-example.swlrc  swlrc-mixed-example.swlrc  swlrc-word-example.swlrc  worker-alignment-result-v0.6.json  worker-draft-request-v3.json  worker-events.jsonl  worker-status-running-v1.json
docs/guides/: best-usage.zh-CN.md  candidate-lyrics.md
docs/specs/: swlrc-v1.md
docs/spikes/: audio-to-lyrics-transcription.md
packaging/macos/: 安装说明.txt
scripts/: build-macos-app.sh  build-macos-release-candidate.sh  build-macos-runtime.sh  collect-macos-runtime-licenses.py  extract_candidate_lyrics_from_audio.py  generate-macos-runtime-manifest.py  generate-macos-wheelhouse-lock.py  install-macos.sh  normalize_candidate_lyrics_script.py  package-macos-dmg.sh  pkg-config-macos-ffmpeg.py  prepare-macos-wheelhouse.sh  sign-macos-app.sh  smoke-macos-app.sh  uninstall-macos.sh  verify-macos-bundle.sh  verify-release-versions.py
spikes/audio_to_lyrics_transcription/: README.md  normalize_transcript_script.py  requirements.txt  run_spike.py
spikes/coarse_lyrics_localization/: .gitignore  README.md  notes.md  run_spike.py
spikes/direct_trusted_lyrics_ctc_alignment/: .gitignore  README.md  notes.md  requirements.txt  (+2 more)
tests/: test_artifacts.py  test_audio_separation.py  test_cli.py  test_desktop_models.py  test_desktop_worker.py  test_docker_contract.py  test_release_versions.py  test_worker.py
(+94 files in other folders)
