[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "xingyu-lyrics-aligner"
version = "0.4.0"
description = "Local-first lyrics forced-alignment toolkit with SWLRC and candidate lyrics support."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
  { name = "Xingyu Lyrics Aligner Contributors" }
]
keywords = ["lyrics", "alignment", "lrc", "karaoke", "local-first"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
alignment = [
  "jieba>=0.42.1,<1",
  "whisperx==3.8.6",
]
candidate-lyrics = [
  "demucs>=4,<5",
  "faster-whisper>=1,<2",
  "opencc-python-reimplemented>=0.1.7,<1",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
xingyu-align = "xingyu_lyrics_aligner.cli:app"
xingyu-lyrics-aligner = "xingyu_lyrics_aligner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/xingyu_lyrics_aligner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["faster_whisper", "jieba", "whisperx"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
